--- a/style.css
+++ b/style.css
@@ -1,2 +1,9 @@
-p{color:rgb(255, 0, 234);font-size: larger;font-weight: 200;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
-body{background-color: black;}
+p{color:rgb(0, 0, 0);font-size: xx-large;font-weight: 200;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
+body{background-color: rgb(8, 192, 137);}
+
+div
+
+{
+max-width: 1200px;
+margin: auto;
+}
